tests/integration/snapshots/integration__conformance__y_array_with_leading_space.json.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
 [1]
stdout ---
[
  1
]

stderr ---
