tests/integration/snapshots/integration__conformance__y_array_with_several_null.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
[1,null,null,null,2]
stdout ---
[1,null,null,null,2]

stderr ---
