tests/integration/snapshots/integration__conformance__y_array_with_trailing_space.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
[2] 
stdout ---
[2]

stderr ---
