tests/integration/snapshots/integration__conformance__y_array_with_trailing_space.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 0
success: true
stdout ---
[2] 
stderr ---
