tests/integration/snapshots/integration__conformance__y_number.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
[123e65]
stdout ---
[123e65]

stderr ---
